--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_rating_bar: ^4.0.1
+  flutter_bloc: ^8.1.1
+  freezed: ^2.3.2
+  json_annotation: ^4.7.0
+  freezed_annotation: ^2.2.0
+  json_serializable: ^6.5.4
 
 dev_dependencies:
   flutter_test:
@@ -47,6 +52,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  build_runner: ^2.3.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
